krakend/templates/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: krakend-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.prd.durp.info`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: krakend-service
          port: 8080
          scheme: http
  tls:
    secretName: api-tls

---

kind: Service
apiVersion: v1
metadata:
  name: api-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.prd.durp.info
spec:
  type: ExternalName
  externalName:.prd.durp.info

---

kind: Service
apiVersion: v1
metadata:
  name: api-developer-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: developer.prd.durp.info
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  type: ExternalName
  externalName: developerdurp.github.io
